<resources>
    <string name="app_name">CrashTracker</string>
    <string name="emailLabel">Email</string>
    <string name="passwordLabel">Password</string>
    <string name="btnSignIn">Sign in</string>
    <string name="txtWelcome">Welcome to CrashTracker!</string>
    <string name="deviceNameLabel">Name:</string>
    <string name="deviceInfoHeader">Device information</string>
    <string name="deviceModelLabel">Model:</string>
    <string name="deviceTypeLabel">Type:</string>
    <string name="deviceServiceInterval">Service interval:</string>
    <string name="deviceServiceIntervalLabel">Service interval:</string>
    <string name="deviceNotifyLabel">Notify before service:</string>
    <string name="deviceDescriptionLabel">Description:</string>
    <string name="btnViewSectors">Sectors</string>
    <string name="btnDeleteDevice">Delete</string>
    <string name="headerDevicesList">Devices list</string>
    <string name="headerSectorsList">Sectors list</string>
    <string name="btnStartService">Start service</string>
    <string name="btnStopService">Stop service</string>
    <string name="btnMore">More</string>
    <string name="labelNextService">Next service: </string>
    <string name="labelSectorStatus">STATUS:</string>
    <string name="labelMaxT">Max T:</string>
    <string name="labelMinT">Min T:</string>
    <string name="labelCurT">Current T:</string>
</resources>
